k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-server
  namespace: auth
spec:
  revisionHistoryLimit: 2
  replicas: 1
  selector:
    matchLabels:
      app: oauth2-server
  template:
    metadata:
      labels:
        app: oauth2-server
    spec:
      containers:
      - name: oauth2-server
        image: felixmurcia/oauth2server:v20260304-2119
        command:
          - java
          - -jar
          - /app/app.jar
        ports:
        - containerPort: 8443
          name: https
        volumeMounts:
        - name: oauth2-data
          mountPath: /data
        - name: tls-keystore
          mountPath: /keystore
          readOnly: true

      volumes:
      - name: oauth2-data
        persistentVolumeClaim:
          claimName: oauth2-pvc
      - name: tls-certs-secret
        secret:
          secretName: tls-keystore-popos
      - name: tls-keystore
        emptyDir: {}
