k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oauth2-server
  namespace: auth
spec:
  selector:
    app: oauth2-server
  ports:
    - name: https
      port: 443
      targetPort: 8080
      protocol: TCP
    - name: https-nodeport
      port: 8080
      targetPort: 8080
      nodePort: 30444
      protocol: TCP
  type: NodePort
